--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,13 +8,19 @@
 
 #dragon {
 
-  display: block;
+  display: none;
   width: 50%;
   height: 50%;
   background: crimson;
   position: fixed;
   top: 0;
   left: 50%;
+
+}
+
+* {
+
+  font-family: papyrus;
 
 }
 
@@ -54,8 +60,103 @@ body {
 
 }
 
+.grid {
+
+  display: grid;
+
+}
+
 #infoBox {
 
+  width: calc( 80% - 20vw );
+  height: calc( 80% - 20vh );
+  top: 10%;
+  left: 10%;
+  background-size: 80vw 80vh;
+  background-repeat: no-repeat;
+  background-position: center center;
+  position: fixed;
+  padding: 10vh 10vw;
+
+}
+
+#header * {
+
+  text-align: center;
+
+}
+
+#header h1 {
+
+  font-size: 46pt;
+
+}
+
+#header p {
+
+  font-size: 20pt;
+
+}
+
+#info {
+
   display: none;
+  height: 100%;
+  grid:
+    "a b" max-content
+    "c b" 1fr
+    / 1fr 1fr
+  ;
+  gap: 0 20pt;
+
+}
+
+#info h1 {
+
+  font-size: 20pt;
+
+}
+
+#info p {
+
+  margin: 0;
+  text-align: justify;
+  font-size: 18pt;
+
+}
+
+#regionImg {
+
+  grid-area: b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+#regionImg img {
+
+  max-width: 100%;
+  max-height: 100%;
+
+}
+
+@media only screen and ( min-width: 800px ) {
+  
+  #infoBox {
+
+    background-image: url( "../img/scroll1.png" );
+
+  }
+
+}
+
+@media only screen and ( max-width: 800px ) {
+  
+  #infoBox {
+
+    background-image: url( "../img/scroll2.png" );
+
+  }
 
 }
