--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,12 @@
 
 }
 
+.ignore {
+
+  display: none!important;
+
+}
+
 #dragon {
 
   display: none;
@@ -107,8 +113,7 @@ body {
 #regionImg img {
 
   grid-area: c;
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
 
 }
 
